--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.45.0",
+    "hashids": "^2.3.0",
     "sass": "^1.69.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
